# D-FAST_transverse_flow

./: pyproject.toml
docs/: rapport.tex
examples/c04 - NVO Maas/: config.ini  normprofiel.geojson  readme.txt
examples/c04 - NVO Maas/output/: C1_profile0_transverse_velocity.xlsx  C1_profile1_transverse_flow.xlsx  C1_profile1_transverse_velocity.xlsx  C2_profile1_transverse_velocity.xlsx  C2_profile1_velocity_angle.xlsx
src/dfasttf/: Dutch_rivers_v3.ini  __init__.py  __main__.py  cmd.py  config.py  ship_dimensions.ini
src/dfasttf/batch/: core.py  cross_flow.py  dflowfm.py  geometry.py  ice.py  operations.py  plotting.py  support.py
src/dfasttf/dfastbe/: support.py
src/dfasttf/examples/c04 - NVO Maas/output/: C1_profile0_transverse_flow.xlsx  C1_profile0_velocity_angle.xlsx  C1_profile1_velocity_angle.xlsx  C2_profile0_transverse_flow.xlsx  C2_profile0_transverse_velocity.xlsx  C2_profile0_velocity_angle.xlsx  C2_profile1_transverse_flow.xlsx
src/dfasttf/kernel/: flow.py  froude.py
tests/: run_dfastrbk.py
