[tool.poetry]
name = "d-fast-traverse-flow"
version = "0.1.0"
description = "A tool to perform a bank erosion analysis based on a number of D-Flow FM simulations."
authors = ["Stichting Deltares <delft3d.support@deltares.nl>"]
readme = "README.md"
packages = [{ include = "dfasttf", from= "src"}]

[tool.poetry.dependencies]
python = "~3.11.0"
dfastio = { git = "https://github.com/Deltares/D-FAST_Commons.git", rev = "0.1.0" }
d-fast-bank-erosion = { git = "https://github.com/Deltares/D-FAST_Bank_Erosion.git", branch = "build/bump-up-versions" }
dfastmi = { git = "https://github.com/Deltares/D-FAST_Morphological_Impact", branch = "build/bump-up-versions"}
tqdm = "^4.67.1"
xugrid = "^0.14.3"
matplotlib = "^3.8.4"



[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^6.0.0"
pyfakefs = "^5.1.0"
teamcity-messages = "^1.32"
pre-commit = "^4.2.0"
commitizen = "^4.8.3"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.2"
mkdocs-material = "^9.5"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
pymdown-extensions = "^10.12"
mkdocs-autorefs = "^1.2"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocs-jupyter = "^0.25.1"
mkdocs-mermaid2-plugin = "^1.2.1"
mike = "^2.1.3"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "<7.0"



[tool.coverage.run]
omit = [
    "tests/test_binaries/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 61


[tool.flake8]
ignore = ["E501", "E203", "F821", "E722", "B001", "D401", "B006", "D202", "W503"]
max-line-length = 88

[tool.black]
profile = "flake8"
line-length = 88
skip-string-normalization = true  # Avoid unnecessary quote changes

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "poetry"
tag_format = "$version"
version_files = [
    "src/dfastbe/__init__.py:__version__",
]
changelog_file = "docs/mkdocs/change-log.md"
update_changelog_on_bump = true
changelog_incremental = true
version_scheme = "pep440"



[tool.pytest.ini_options]
addopts = [ "--cov",
            "--cov-report=term",
            "--cov-report=html",
            "--cov-report=xml:coverage-reports/coverage.xml",
]
testpaths="tests"

markers = [
    "e2e: marks tests as e2e (deselect with '-m \"not e2e\"')",
    "binaries: marks tests as binaries (deselect with '-m \"not binaries\"')",
    "unit: marks tests as unit (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
